# bowerbird-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.devcontainer/: devcontainer.json
bowerbird_cli/: Cargo.toml
bowerbird_cli/src/: lib.rs  log.rs
bowerbird_core/: Cargo.toml
bowerbird_core/migrations/: 20220918130642_init.sql  20220928021639_init.sql  20221020042511_latest_view.sql  20221020042511_view.sql  20221104115458_helper.sql  20230813094731_pixiv_novel_series.sql  20230813125921_novel_series_view.sql
bowerbird_core/src/: config.rs  lib.rs
bowerbird_core/src/model/: mod.rs  pixiv.rs
bowerbird_migrate/: Cargo.toml
bowerbird_migrate/src/: main.rs
bowerbird_migrate/src/model/: mod.rs  pixiv.rs
bowerbird_migrate/src/model/sql/: mod.rs  pixiv.rs
bowerbird_pixiv/: Cargo.toml
bowerbird_pixiv/src/: database.rs  download.rs  error.rs  lib.rs  queries.rs  utils.rs
bowerbird_server/: Cargo.toml
bowerbird_server/src/: error.rs  lib.rs  pixiv.rs  utils.rs
bowerbird_utils/: Cargo.toml
bowerbird_utils/src/: error.rs  lib.rs  waitgroup.rs
bowerbird_utils/src/downloader/: aria2.rs  mod.rs
migrations/: 20220912072747_init.sql
src/: cli.rs  config.rs  downloader.rs  error.rs  lib.rs  log.rs  main.rs  models.rs  server.rs
src/command/: migrate.rs  mod.rs
src/command/pixiv/: database.rs  download.rs  mod.rs  utils.rs
src/commands/: pixiv.rs
src/commands/pixiv/: database.rs  download.rs  utils.rs
src/downloader/: aria2.rs  mod.rs
src/model/: mod.rs  pixiv.rs
src/model/sql/: mod.rs  pixiv.rs
src/models/: pixiv.rs
src/server/: error.rs  fs.rs  mod.rs  pixiv.rs  query.rs  utils.rs
src/utils/: migrate.rs  mod.rs  waitgroup.rs
