[package]
name = "bowerbird"
version = "0.1.0"
edition = "2021"

[features]

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
mongodb = "2"
bson = { version = "2", features = ["chrono-0_4"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
color-thief = "0.2"
image = "0.24"
regex = "1"
pixivcrab = { path = "../pixivcrab" }
aria2-ws = "0.2"
clap = { version = "3", features = ["derive"] }
dirs = "4"
serde_json = "1"
snafu = { version = "0.7" }
reqwest = "0.11"
lazy_static = "1"
url = "2"
mime_guess = "2"
path-slash = "0.1"
zip = "0.5"
bytes = "1"
actix-web = "4"
actix-files = "0.6"
serde_urlencoded = "0.7"
env_logger = "0.9"
log = "0.4"
num_cpus = "1"
indexmap = { version = "1", features = ["serde"] }
# pyroscope = "*"
