[package]
name = "bowerbird"
version = "0.1.0"
edition = "2021"

[features]

[workspace]

members = [
  # ".",
  # "bowerbird_cli",
  "bowerbird_utils",
  # "bowerbird_server",
  "bowerbird_pixiv",
  "bowerbird_migrate",
  "bowerbird_core",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 1

[dependencies]
bowerbird_cli = { path = "bowerbird_cli" }

dotenvy = "0.15"
tokio = { version = "1", features = ["rt", "macros"] }

# [dependencies]
# mongodb = "2"
# bson = { version = "2", features = ["chrono-0_4"] }
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# chrono = { version = "0.4", features = ["serde"] }
# futures = "0.3"
# color-thief = "0.2"
# image = "0.24"
# regex = "1"
# pixivcrab = "0.2.0"
# aria2-ws = "0.3"
# clap = { version = "3", features = ["derive"] }
# dirs = "4"
# serde_json = "1"
# snafu = { version = "0.7" }
# reqwest = { version = "0.11", features = ["socks"] }
# lazy_static = "1"
# url = "2"
# mime_guess = "2"
# path-slash = "0.2"
# zip = "0.6"
# bytes = "1"
# actix-web = "4"
# actix-files = "0.6"
# serde_urlencoded = "0.7"
# log = "0.4"
# num_cpus = "1"
# indexmap = { version = "1", features = ["serde"] }
# # pyroscope = "*"
# log4rs = { version = "1", default-features = false, features = [
#   "console_appender",
# ] }
# anyhow = "1"
# colored = "2"
# sqlx = { version = "0.6", features = [
#   "runtime-tokio-rustls",
#   "postgres",
#   "time",
#   "chrono",
# ] }
# dotenvy = "0.15"
# dotenvy_macro = "0.15"
