[package]
name = "bowerbird"
version = "0.2.0"
edition = "2021"

[features]

[workspace]

members = ["bowerbird_*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 1

[dependencies]
bowerbird_cli = { path = "bowerbird_cli" }

dotenvy = "0.15"
tokio = { version = "1", features = ["rt", "macros"] }
