[package]
name = "bowerbird_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "chrono",
] }
log = "0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = { version = "0.7" }
dirs = "4"
reqwest = { version = "0.11", features = ["socks"] }
