[package]
name = "bowerbird_migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2", features = ["chrono-0_4"] }
mongodb = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "chrono",
] }
dotenvy = "0.15"
anyhow = "1"
serde_json = "1"
