[package]
name = "bowerbird_server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bowerbird_core = { path = "../bowerbird_core" }
bowerbird_pixiv = { path = "../bowerbird_pixiv" }

actix-files = "0.6"
actix-web = "4.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = { version = "0.7" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "chrono",
] }
image = "0.24"
bytes = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
num_cpus = "1"
