[package]
name = "bowerbird_utils"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["process", "time"] }
log = "0.4"
aria2-ws = "0.3"
reqwest = { version = "0.11", features = ["socks"] }
futures = "0.3"
colored = "2"
snafu = { version = "0.7" }
anyhow = "1"
image = "0.24"
color-thief = "0.2"
rustls = "0.20"
rustls-native-certs = "0.6"
webpki = "0.22"
